Ensure maintenance runs
This fixes an issue that was preventing maintenance (such as TLS
reloads) from running.

Fix: https://github.com/io7m-com/cardant/issues/195
See: https://github.com/io7m-com/idstore/issues/243