@@ -17,28 +17,26 @@
 
 package com.io7m.cardant.server.service.maintenance;
 
-import com.io7m.cardant.database.api.CADatabaseException;
 import com.io7m.cardant.database.api.CADatabaseQueriesMaintenanceType;
 import com.io7m.cardant.database.api.CADatabaseRole;
-import com.io7m.cardant.database.api.CADatabaseTransactionType;
 import com.io7m.cardant.database.api.CADatabaseType;
+import com.io7m.cardant.database.api.CADatabaseUnit;
 import com.io7m.cardant.server.service.clock.CAServerClock;
-import com.io7m.cardant.server.service.configuration.CAConfigurationServiceType;
+import com.io7m.cardant.server.service.configuration.CAConfigurationService;
 import com.io7m.cardant.server.service.telemetry.api.CAServerTelemetryServiceType;
 import com.io7m.cardant.server.service.tls.CATLSContextServiceType;
+import com.io7m.jmulticlose.core.CloseableCollection;
+import com.io7m.jmulticlose.core.CloseableCollectionType;
+import com.io7m.jmulticlose.core.ClosingResourceFailedException;
 import com.io7m.repetoir.core.RPServiceType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.time.Duration;
 import java.util.Objects;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-
-import static com.io7m.cardant.database.api.CADatabaseUnit.UNIT;
 
 /**
  * A service that performs nightly database maintenance.
@@ -50,42 +48,38 @@ public final class CAMaintenanceService
   private static final Logger LOG =
     LoggerFactory.getLogger(CAMaintenanceService.class);
 
-  private final ExecutorService executor;
-  private final CAServerClock clock;
   private final CAServerTelemetryServiceType telemetry;
   private final CADatabaseType database;
   private final CATLSContextServiceType tlsContexts;
-  private final CAConfigurationServiceType configuration;
   private final AtomicBoolean closed;
-  private final CompletableFuture<Void> waitTLS;
-  private final CompletableFuture<Void> waitMaintenance;
+  private final ScheduledExecutorService tlsExecutor;
+  private final ScheduledExecutorService maintenanceExecutor;
+  private final CloseableCollectionType<ClosingResourceFailedException> resources;
 
   private CAMaintenanceService(
-    final ExecutorService inExecutor,
-    final CAServerClock inClock,
     final CAServerTelemetryServiceType inTelemetry,
     final CADatabaseType inDatabase,
     final CATLSContextServiceType inTlsContexts,
-    final CAConfigurationServiceType inConfiguration)
+    final ScheduledExecutorService inTlsExecutor,
+    final ScheduledExecutorService inMaintenanceExecutor)
   {
-    this.executor =
-      Objects.requireNonNull(inExecutor, "executor");
-    this.clock =
-      Objects.requireNonNull(inClock, "clock");
+    this.tlsExecutor =
+      Objects.requireNonNull(inTlsExecutor, "executor");
+    this.maintenanceExecutor =
+      Objects.requireNonNull(inMaintenanceExecutor, "executor");
     this.telemetry =
       Objects.requireNonNull(inTelemetry, "telemetry");
     this.database =
       Objects.requireNonNull(inDatabase, "database");
     this.tlsContexts =
       Objects.requireNonNull(inTlsContexts, "tlsContexts");
-    this.configuration =
-      Objects.requireNonNull(inConfiguration, "configuration");
+
+    this.resources = CloseableCollection.create();
+    this.resources.add(this.tlsExecutor);
+    this.resources.add(this.maintenanceExecutor);
+
     this.closed =
       new AtomicBoolean(false);
-    this.waitTLS =
-      new CompletableFuture<Void>();
-    this.waitMaintenance =
-      new CompletableFuture<Void>();
   }
 
   /**
@@ -103,7 +97,7 @@ public final class CAMaintenanceService
   public static CAMaintenanceService create(
     final CAServerClock clock,
     final CAServerTelemetryServiceType telemetry,
-    final CAConfigurationServiceType configuration,
+    final CAConfigurationService configuration,
     final CATLSContextServiceType tlsContexts,
     final CADatabaseType database)
   {
@@ -113,92 +107,53 @@ public final class CAMaintenanceService
     Objects.requireNonNull(telemetry, "telemetry");
     Objects.requireNonNull(tlsContexts, "tlsContexts");
 
-    final var executor =
-      Executors.newThreadPerTaskExecutor(
-        Thread.ofVirtual()
-          .name("com.io7m.cardant.maintenance-", 0L)
-          .factory()
-      );
+    final var tlsExecutor =
+      Executors.newSingleThreadScheduledExecutor(r -> {
+        final var thread = new Thread(r);
+        thread.setName("com.io7m.cardant.maintenance.tls");
+        thread.setDaemon(true);
+        return thread;
+      });
+
+    final var maintenanceExecutor =
+      Executors.newSingleThreadScheduledExecutor(r -> {
+        final var thread = new Thread(r);
+        thread.setName("com.io7m.cardant.maintenance.db");
+        thread.setDaemon(true);
+        return thread;
+      });
 
     final var maintenanceService =
       new CAMaintenanceService(
-        executor,
-        clock,
         telemetry,
         database,
         tlsContexts,
-        configuration
+        tlsExecutor,
+        maintenanceExecutor
       );
 
-    executor.execute(maintenanceService::runTLSReloadTask);
-    executor.execute(maintenanceService::runMaintenanceTask);
-    return maintenanceService;
-  }
-
-  /**
-   * A task that executes maintenance once when the service starts, and then
-   * again at every subsequent midnight.
-   */
-
-  private void runMaintenanceTask()
-  {
-    while (!this.closed.get()) {
-      try {
-        this.runMaintenance();
-      } catch (final Exception e) {
-        // Not important.
-      }
-
-      final var timeNow =
-        this.clock.now();
-      final var timeNextMidnight =
-        timeNow.withHour(0)
-          .withMinute(0)
-          .withSecond(0)
-          .plusDays(1L);
-
-      final var untilNext =
-        Duration.between(timeNow, timeNextMidnight);
-
-      try {
-        this.waitMaintenance.get(untilNext.toSeconds(), TimeUnit.SECONDS);
-      } catch (final Exception e) {
-        break;
-      }
-    }
-  }
-
-  /**
-   * A task that reloads TLS contexts at the specified reload interval.
-   */
-
-  private void runTLSReloadTask()
-  {
     final var reloadIntervalOpt =
-      this.configuration.configuration()
+      configuration.configuration()
         .maintenanceConfiguration()
         .tlsReloadInterval();
 
-    if (reloadIntervalOpt.isEmpty()) {
-      return;
-    }
+    reloadIntervalOpt.ifPresent(duration -> {
+      tlsExecutor.scheduleWithFixedDelay(
+        maintenanceService::runTLSReload,
+        0L,
+        duration.toMillis(),
+        TimeUnit.MILLISECONDS
+      );
+    });
 
-    final var reloadInterval =
-      reloadIntervalOpt.get();
+    maintenanceExecutor.scheduleWithFixedDelay(
+      maintenanceService::runMaintenance,
+      0L,
+      24L,
+      TimeUnit.HOURS
+    );
 
-    while (!this.closed.get()) {
-      try {
-        this.runTLSReload();
-      } catch (final Exception e) {
-        // Not important.
-      }
-
-      try {
-        this.waitTLS.get(reloadInterval.toSeconds(), TimeUnit.SECONDS);
-      } catch (final Exception e) {
-        break;
-      }
-    }
+    return maintenanceService;
   }
 
   private void runTLSReload()
@@ -219,15 +174,11 @@ public final class CAMaintenanceService
     try (var ignored = span.makeCurrent()) {
       try (var connection =
              this.database.openConnection(CADatabaseRole.CARDANT)) {
-        try (var transaction =
-               connection.openTransaction()) {
+        try (var transaction = connection.openTransaction()) {
+          transaction.queries(CADatabaseQueriesMaintenanceType.ExecuteType.class)
+            .execute(CADatabaseUnit.UNIT);
 
-          try {
-            executeDatabaseMaintenance(transaction);
-          } catch (final Exception e) {
-            span.recordException(e);
-          }
-
+          transaction.commit();
           LOG.info("Maintenance task completed.");
         }
       }
@@ -237,15 +188,6 @@ public final class CAMaintenanceService
     } finally {
       span.end();
     }
-  }
-
-  private static void executeDatabaseMaintenance(
-    final CADatabaseTransactionType transaction)
-    throws CADatabaseException
-  {
-    transaction.queries(CADatabaseQueriesMaintenanceType.ExecuteType.class)
-      .execute(UNIT);
-    transaction.commit();
   }
 
   @Override
@@ -258,9 +200,11 @@ public final class CAMaintenanceService
   public void close()
   {
     if (this.closed.compareAndSet(false, true)) {
-      this.waitTLS.complete(null);
-      this.waitMaintenance.complete(null);
-      this.executor.close();
+      try {
+        this.resources.close();
+      } catch (final ClosingResourceFailedException e) {
+        // Nothing we can do about this.
+      }
     }
   }
 
